--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TradingPro Demo | Online Trading Platform</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="OnlineTrading.css">
+    <link rel="stylesheet" href="index.css">
         
 </head>
 <body>
@@ -232,7 +232,7 @@
         </div>
     </footer>
 
-    <script src = "OnlineTrading.js">
+    <script src = "index.js">
       </script>
 </body>
 </html>
